manager delete a category